--- a/Preprocessing/dist_cal.ipynb
+++ b/Preprocessing/dist_cal.ipynb
@@ -46,15 +46,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path = \"data/datathon_participants.json\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
@@ -193,11 +184,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>university</th>\n",
+       "      <th>interests</th>\n",
+       "      <th>preferred_role</th>\n",
+       "      <th>friend_registration</th>\n",
+       "      <th>preferred_team_size</th>\n",
+       "      <th>availability</th>\n",
+       "      <th>programming_skills</th>\n",
+       "      <th>interest_in_challenges</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>languages_ordered</th>\n",
+       "      <th>maturity</th>\n",
+       "      <th>Tryhard</th>\n",
+       "      <th>Rookie</th>\n",
+       "      <th>Learner</th>\n",
+       "      <th>Portfolio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2ebad15c-c0ef-4c04-ba98-c5d98403a90c</td>\n",
+       "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
+       "      <td>[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>Design</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 0, 1, 1]</td>\n",
+       "      <td>{'Data Visualization': 2, 'Flask': 4, 'React N...</td>\n",
+       "      <td>['Mango Challenge', 'Restb.ai Challenge', 'AED...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['Catalan', 'English']</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a00428a2-14a2-4fb1-838a-22394778ec88</td>\n",
+       "      <td>Universitat Pompeu Fabra (UPF)</td>\n",
+       "      <td>[0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>Analysis</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[1, 0, 1, 0, 1]</td>\n",
+       "      <td>{'React': 4, 'PostgreSQL': 5, 'Figma': 7, 'SQL...</td>\n",
+       "      <td>['AED Challenge', 'Mango Challenge', 'Restb.ai...</td>\n",
+       "      <td>7.167038</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ab4b5790-0e6b-43db-bbaa-8670554f0cc8</td>\n",
+       "      <td>Universidad de Sevilla</td>\n",
+       "      <td>[0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, ...</td>\n",
+       "      <td>Analysis</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 1, 1, 1]</td>\n",
+       "      <td>{'PostgreSQL': 4, 'TensorFlow': 5, 'Computer V...</td>\n",
+       "      <td>['Restb.ai Challenge', 'Mango Challenge', 'AED...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['Spanish', 'English', 'French', 'German', 'It...</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3</td>\n",
+       "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
+       "      <td>[0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, ...</td>\n",
+       "      <td>Design</td>\n",
+       "      <td>['13a8194a-79a9-4004-8711-e6d89efa0014', '2a48...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 0, 1, 1]</td>\n",
+       "      <td>{'IoT': 4, 'HTML/CSS': 6, 'MongoDB': 5, 'Block...</td>\n",
+       "      <td>['Restb.ai Challenge', 'AED Challenge', 'Mango...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['Catalan', 'English']</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>624f4677-d31a-4ecf-a7de-5df7392f9579</td>\n",
+       "      <td>Universitat Politècnica de Catalunya (UPC)</td>\n",
+       "      <td>[1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, ...</td>\n",
+       "      <td>Design</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 1, 1, 1]</td>\n",
+       "      <td>{'iOS Development': 2, 'Flask': 6, 'TensorFlow...</td>\n",
+       "      <td>['Restb.ai Challenge', 'AED Challenge', 'Mango...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     id  \\\n",
+       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   \n",
+       "1  a00428a2-14a2-4fb1-838a-22394778ec88   \n",
+       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   \n",
+       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   \n",
+       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   \n",
+       "\n",
+       "                                     university  \\\n",
+       "0  Universitat Internacional de Catalunya (UIC)   \n",
+       "1                Universitat Pompeu Fabra (UPF)   \n",
+       "2                        Universidad de Sevilla   \n",
+       "3  Universitat Internacional de Catalunya (UIC)   \n",
+       "4    Universitat Politècnica de Catalunya (UPC)   \n",
+       "\n",
+       "                                           interests preferred_role  \\\n",
+       "0  [1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...         Design   \n",
+       "1  [0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, ...       Analysis   \n",
+       "2  [0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, ...       Analysis   \n",
+       "3  [0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, ...         Design   \n",
+       "4  [1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, ...         Design   \n",
+       "\n",
+       "                                 friend_registration  preferred_team_size  \\\n",
+       "0                                                 []                    4   \n",
+       "1                                                 []                    3   \n",
+       "2                                                 []                    4   \n",
+       "3  ['13a8194a-79a9-4004-8711-e6d89efa0014', '2a48...                    4   \n",
+       "4                                                 []                    4   \n",
+       "\n",
+       "      availability                                 programming_skills  \\\n",
+       "0  [1, 1, 0, 1, 1]  {'Data Visualization': 2, 'Flask': 4, 'React N...   \n",
+       "1  [1, 0, 1, 0, 1]  {'React': 4, 'PostgreSQL': 5, 'Figma': 7, 'SQL...   \n",
+       "2  [1, 1, 1, 1, 1]  {'PostgreSQL': 4, 'TensorFlow': 5, 'Computer V...   \n",
+       "3  [1, 1, 0, 1, 1]  {'IoT': 4, 'HTML/CSS': 6, 'MongoDB': 5, 'Block...   \n",
+       "4  [1, 1, 1, 1, 1]  {'iOS Development': 2, 'Flask': 6, 'TensorFlow...   \n",
+       "\n",
+       "                              interest_in_challenges  experience  \\\n",
+       "0  ['Mango Challenge', 'Restb.ai Challenge', 'AED...    4.394449   \n",
+       "1  ['AED Challenge', 'Mango Challenge', 'Restb.ai...    7.167038   \n",
+       "2  ['Restb.ai Challenge', 'Mango Challenge', 'AED...    4.394449   \n",
+       "3  ['Restb.ai Challenge', 'AED Challenge', 'Mango...    4.394449   \n",
+       "4  ['Restb.ai Challenge', 'AED Challenge', 'Mango...    4.394449   \n",
+       "\n",
+       "                                   languages_ordered  maturity  Tryhard  \\\n",
+       "0                             ['Catalan', 'English']       4.6        0   \n",
+       "1                                        ['English']       3.4        0   \n",
+       "2  ['Spanish', 'English', 'French', 'German', 'It...       3.6        0   \n",
+       "3                             ['Catalan', 'English']       3.6        0   \n",
+       "4                                        ['English']       3.4        0   \n",
+       "\n",
+       "   Rookie  Learner  Portfolio  \n",
+       "0       0        0          0  \n",
+       "1       0        0          0  \n",
+       "2       0        0          0  \n",
+       "3       0        0          0  \n",
+       "4       0        0          0  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('clean_data_actualitzat.csv')\n"
+    "df = pd.read_csv('clean_data_actualitzat.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -467,10 +661,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>university</th>\n",
+       "      <th>interests</th>\n",
+       "      <th>preferred_role</th>\n",
+       "      <th>friend_registration</th>\n",
+       "      <th>preferred_team_size</th>\n",
+       "      <th>availability</th>\n",
+       "      <th>programming_skills</th>\n",
+       "      <th>interest_in_challenges</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>languages_ordered</th>\n",
+       "      <th>maturity</th>\n",
+       "      <th>Tryhard</th>\n",
+       "      <th>Rookie</th>\n",
+       "      <th>Learner</th>\n",
+       "      <th>Portfolio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2ebad15c-c0ef-4c04-ba98-c5d98403a90c</td>\n",
+       "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
+       "      <td>[1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>Design</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 0, 1, 1]</td>\n",
+       "      <td>{'Data Visualization': 2, 'Flask': 4, 'React N...</td>\n",
+       "      <td>['Mango Challenge', 'Restb.ai Challenge', 'AED...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['Catalan', 'English']</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a00428a2-14a2-4fb1-838a-22394778ec88</td>\n",
+       "      <td>Universitat Pompeu Fabra (UPF)</td>\n",
+       "      <td>[0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>Analysis</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[1, 0, 1, 0, 1]</td>\n",
+       "      <td>{'React': 4, 'PostgreSQL': 5, 'Figma': 7, 'SQL...</td>\n",
+       "      <td>['AED Challenge', 'Mango Challenge', 'Restb.ai...</td>\n",
+       "      <td>7.167038</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ab4b5790-0e6b-43db-bbaa-8670554f0cc8</td>\n",
+       "      <td>Universidad de Sevilla</td>\n",
+       "      <td>[0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, ...</td>\n",
+       "      <td>Analysis</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 1, 1, 1]</td>\n",
+       "      <td>{'PostgreSQL': 4, 'TensorFlow': 5, 'Computer V...</td>\n",
+       "      <td>['Restb.ai Challenge', 'Mango Challenge', 'AED...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['Spanish', 'English', 'French', 'German', 'It...</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3</td>\n",
+       "      <td>Universitat Internacional de Catalunya (UIC)</td>\n",
+       "      <td>[0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, ...</td>\n",
+       "      <td>Design</td>\n",
+       "      <td>['13a8194a-79a9-4004-8711-e6d89efa0014', '2a48...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 0, 1, 1]</td>\n",
+       "      <td>{'IoT': 4, 'HTML/CSS': 6, 'MongoDB': 5, 'Block...</td>\n",
+       "      <td>['Restb.ai Challenge', 'AED Challenge', 'Mango...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['Catalan', 'English']</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>624f4677-d31a-4ecf-a7de-5df7392f9579</td>\n",
+       "      <td>Universitat Politècnica de Catalunya (UPC)</td>\n",
+       "      <td>[1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, ...</td>\n",
+       "      <td>Design</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 1, 1, 1, 1]</td>\n",
+       "      <td>{'iOS Development': 2, 'Flask': 6, 'TensorFlow...</td>\n",
+       "      <td>['Restb.ai Challenge', 'AED Challenge', 'Mango...</td>\n",
+       "      <td>4.394449</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     id  \\\n",
+       "0  2ebad15c-c0ef-4c04-ba98-c5d98403a90c   \n",
+       "1  a00428a2-14a2-4fb1-838a-22394778ec88   \n",
+       "2  ab4b5790-0e6b-43db-bbaa-8670554f0cc8   \n",
+       "3  cda2fafe-4b1e-4581-9fe0-1fb6d3e79aa3   \n",
+       "4  624f4677-d31a-4ecf-a7de-5df7392f9579   \n",
+       "\n",
+       "                                     university  \\\n",
+       "0  Universitat Internacional de Catalunya (UIC)   \n",
+       "1                Universitat Pompeu Fabra (UPF)   \n",
+       "2                        Universidad de Sevilla   \n",
+       "3  Universitat Internacional de Catalunya (UIC)   \n",
+       "4    Universitat Politècnica de Catalunya (UPC)   \n",
+       "\n",
+       "                                           interests preferred_role  \\\n",
+       "0  [1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...         Design   \n",
+       "1  [0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, ...       Analysis   \n",
+       "2  [0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, ...       Analysis   \n",
+       "3  [0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, ...         Design   \n",
+       "4  [1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, ...         Design   \n",
+       "\n",
+       "                                 friend_registration  preferred_team_size  \\\n",
+       "0                                                 []                    4   \n",
+       "1                                                 []                    3   \n",
+       "2                                                 []                    4   \n",
+       "3  ['13a8194a-79a9-4004-8711-e6d89efa0014', '2a48...                    4   \n",
+       "4                                                 []                    4   \n",
+       "\n",
+       "      availability                                 programming_skills  \\\n",
+       "0  [1, 1, 0, 1, 1]  {'Data Visualization': 2, 'Flask': 4, 'React N...   \n",
+       "1  [1, 0, 1, 0, 1]  {'React': 4, 'PostgreSQL': 5, 'Figma': 7, 'SQL...   \n",
+       "2  [1, 1, 1, 1, 1]  {'PostgreSQL': 4, 'TensorFlow': 5, 'Computer V...   \n",
+       "3  [1, 1, 0, 1, 1]  {'IoT': 4, 'HTML/CSS': 6, 'MongoDB': 5, 'Block...   \n",
+       "4  [1, 1, 1, 1, 1]  {'iOS Development': 2, 'Flask': 6, 'TensorFlow...   \n",
+       "\n",
+       "                              interest_in_challenges  experience  \\\n",
+       "0  ['Mango Challenge', 'Restb.ai Challenge', 'AED...    4.394449   \n",
+       "1  ['AED Challenge', 'Mango Challenge', 'Restb.ai...    7.167038   \n",
+       "2  ['Restb.ai Challenge', 'Mango Challenge', 'AED...    4.394449   \n",
+       "3  ['Restb.ai Challenge', 'AED Challenge', 'Mango...    4.394449   \n",
+       "4  ['Restb.ai Challenge', 'AED Challenge', 'Mango...    4.394449   \n",
+       "\n",
+       "                                   languages_ordered  maturity  Tryhard  \\\n",
+       "0                             ['Catalan', 'English']       4.6        0   \n",
+       "1                                        ['English']       3.4        0   \n",
+       "2  ['Spanish', 'English', 'French', 'German', 'It...       3.6        0   \n",
+       "3                             ['Catalan', 'English']       3.6        0   \n",
+       "4                                        ['English']       3.4        0   \n",
+       "\n",
+       "   Rookie  Learner  Portfolio  \n",
+       "0       0        0          0  \n",
+       "1       0        0          0  \n",
+       "2       0        0          0  \n",
+       "3       0        0          0  \n",
+       "4       0        0          0  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
