--- a/Preprocessing/dist_cal.ipynb
+++ b/Preprocessing/dist_cal.ipynb
@@ -1730,11 +1730,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15279.20788656548</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15304.37568208594</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15279.20788656548\u001b[0m\n"
+       "\u001b[1;36m15304.37568208594\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1743,11 +1743,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15228.106450194022</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15301.26195083498</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15228.106450194022\u001b[0m\n"
+       "\u001b[1;36m15301.26195083498\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1756,11 +1756,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15274.762797385692</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15274.762797385692\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1769,11 +1769,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15226.504770755364</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15226.504770755364\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1782,11 +1782,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15226.504770755364</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15226.504770755364\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1795,11 +1795,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15213.548112891485</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15213.548112891485\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1808,11 +1808,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15140.98583196964</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15140.98583196964\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1821,11 +1821,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15140.98583196964</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15140.98583196964\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1834,11 +1834,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15140.98583196964</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15140.98583196964\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1847,11 +1847,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15169.101834728126</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15140.98583196964</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m15169.101834728126\u001b[0m\n"
+       "\u001b[1;36m15140.98583196964\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1920,7 +1920,7 @@
     "\n",
     "def muta_grups_aleatoriament(grups: list[list[str]]):\n",
     "    # Exemples de mútacions:\n",
-    "    grup1, grup2 = random.sample(grups, 2)\n",
+    "    grups_canvi = random.sample(grups, )\n",
     "    p1 = random.choice(grup1)\n",
     "    p2 = random.choice(grup2)\n",
     "    grup1.remove(p1)\n",
