He afegit coses

--- a/Algorithms/group_maker.ipynb
+++ b/Algorithms/group_maker.ipynb
@@ -815,11 +815,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "millors_grups_final = list(best_groups.values())"
+    "best_groups_final = list(best_groups.values())"
    ]
   },
   {
@@ -831,6 +831,282 @@
     "import json\n",
     "with open(\"best_groups.json\", \"w\", encoding=\"utf-8\") as json_file:\n",
     "    json.dump(best_groups, json_file, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from participant import load_participants\n",
+    "\n",
+    "\n",
+    "\n",
+    "data_path = \"datathon_participants.json\"\n",
+    "\n",
+    "participants_sencer = load_participants(data_path)\n",
+    "\n",
+    "id_nom : dict[str,str] = {}\n",
+    "\n",
+    "id_email : dict[str,str] = {}\n",
+    "\n",
+    "for p in participants_sencer:\n",
+    "\n",
+    "    id_nom[str(p.id)] = p.name\n",
+    "\n",
+    "    id_email[str(p.id)] = p.email"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Grup <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Grup \u001b[1;36m1\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+--------------------+-------------------------------+\n",
+       "|        Nom         |             Email             |\n",
+       "+--------------------+-------------------------------+\n",
+       "| Zoë Émile-Linguate |   zo_mile-linguate@gmail.com  |\n",
+       "| Esther Sofía Braun | esther_sofa_braun@outlook.com |\n",
+       "|    Emily Patel     |     emily_patel@gmail.com     |\n",
+       "|  Anna Maria Solà   |    anna_maria_sol@gmail.com   |\n",
+       "+--------------------+-------------------------------+\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "+--------------------+-------------------------------+\n",
+       "|        Nom         |             Email             |\n",
+       "+--------------------+-------------------------------+\n",
+       "| Zoë Émile-Linguate |   zo_mile-linguate@gmail.com  |\n",
+       "| Esther Sofía Braun | esther_sofa_braun@outlook.com |\n",
+       "|    Emily Patel     |     emily_patel@gmail.com     |\n",
+       "|  Anna Maria Solà   |    anna_maria_sol@gmail.com   |\n",
+       "+--------------------+-------------------------------+\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "----------------------------------------\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n",
+       "----------------------------------------\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Grup <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Grup \u001b[1;36m2\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+----------------------------+---------------------------------------+\n",
+       "|            Nom             |                 Email                 |\n",
+       "+----------------------------+---------------------------------------+\n",
+       "|    Sofía López Martínez    |      sofa_lpez_martnez@gmail.com      |\n",
+       "|    Lena Valencia Hansen    |     lena_valencia_hansen@gmail.com    |\n",
+       "| Aurélie Montserrat Collins | aurlie_montserrat_collins@outlook.com |\n",
+       "|        Lucas Parker        |        lucas_parker@outlook.com       |\n",
+       "+----------------------------+---------------------------------------+\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "+----------------------------+---------------------------------------+\n",
+       "|            Nom             |                 Email                 |\n",
+       "+----------------------------+---------------------------------------+\n",
+       "|    Sofía López Martínez    |      sofa_lpez_martnez@gmail.com      |\n",
+       "|    Lena Valencia Hansen    |     lena_valencia_hansen@gmail.com    |\n",
+       "| Aurélie Montserrat Collins | aurlie_montserrat_collins@outlook.com |\n",
+       "|        Lucas Parker        |        lucas_parker@outlook.com       |\n",
+       "+----------------------------+---------------------------------------+\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "----------------------------------------\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n",
+       "----------------------------------------\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Grup <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Grup \u001b[1;36m3\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------------+----------------------------------+\n",
+       "|           Nom           |              Email               |\n",
+       "+-------------------------+----------------------------------+\n",
+       "| Aurélie Sanchez Elliott | aurlie_sanchez_elliott@gmail.com |\n",
+       "|      Helena Klinger     |    helena_klinger@outlook.com    |\n",
+       "|     Antónia Gaspard     |     antnia_gaspard@gmail.com     |\n",
+       "|     Rafaelo Zanetti     |    rafaelo_zanetti@gmail.com     |\n",
+       "+-------------------------+----------------------------------+\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "+-------------------------+----------------------------------+\n",
+       "|           Nom           |              Email               |\n",
+       "+-------------------------+----------------------------------+\n",
+       "| Aurélie Sanchez Elliott | aurlie_sanchez_elliott@gmail.com |\n",
+       "|      Helena Klinger     |    helena_klinger@outlook.com    |\n",
+       "|     Antónia Gaspard     |     antnia_gaspard@gmail.com     |\n",
+       "|     Rafaelo Zanetti     |    rafaelo_zanetti@gmail.com     |\n",
+       "+-------------------------+----------------------------------+\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "----------------------------------------\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n",
+       "----------------------------------------\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Grup <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Grup \u001b[1;36m4\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+---------------------+-------------------------------+\n",
+       "|         Nom         |             Email             |\n",
+       "+---------------------+-------------------------------+\n",
+       "| Sofia Estela Farran | sofia_estela_farran@gmail.com |\n",
+       "|   Aurélie Windsor   |    aurlie_windsor@yahoo.com   |\n",
+       "|   Eliana Rodriguez  |   eliana_rodriguez@yahoo.com  |\n",
+       "|    Evelyn Winters   |   evelyn_winters@outlook.com  |\n",
+       "+---------------------+-------------------------------+\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "+---------------------+-------------------------------+\n",
+       "|         Nom         |             Email             |\n",
+       "+---------------------+-------------------------------+\n",
+       "| Sofia Estela Farran | sofia_estela_farran@gmail.com |\n",
+       "|   Aurélie Windsor   |    aurlie_windsor@yahoo.com   |\n",
+       "|   Eliana Rodriguez  |   eliana_rodriguez@yahoo.com  |\n",
+       "|    Evelyn Winters   |   evelyn_winters@outlook.com  |\n",
+       "+---------------------+-------------------------------+\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "----------------------------------------\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n",
+       "----------------------------------------\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from prettytable import PrettyTable\n",
+    "\n",
+    "best_groups_4 = best_groups[4][:4]\n",
+    "for idx, grup in enumerate(best_groups_4, start=1):\n",
+    "    print(f\"Grup {idx}\")\n",
+    "    taula = PrettyTable()\n",
+    "    taula.field_names = [\"Nom\", \"Email\"]\n",
+    "    \n",
+    "    for persona in grup:\n",
+    "        nom, email = id_nom[persona], id_email[persona]\n",
+    "        taula.add_row([nom, email])\n",
+    "    \n",
+    "    print(taula)\n",
+    "    print(\"\\n\" + \"-\" * 40 + \"\\n\") "
    ]
   }
  ],
