--- a/Algorithms/group_maker.ipynb
+++ b/Algorithms/group_maker.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,9 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.manifold import MDS\n",
     "import matplotlib.pyplot as plt\n",
-    "import random"
+    "import random\n",
+    "import json\n",
+    "import os"
    ]
   },
   {
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -371,14 +373,14 @@
        "4  0.034948  0.000000   0.000000  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Import the clean dataset\n",
-    "df = pd.read_csv('Algorithms/clean_data_actualitzat.csv')\n",
+    "df = pd.read_csv('clean_data_actualitzat.csv')\n",
     "df.head()"
    ]
   },
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,17 +794,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">84.83194236614678</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1023.1061487505765</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13009.095242108186</span><span style=\"font-weight: bold\">]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">88.48164595004377</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1006.6169282281314</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13025.41212327737</span><span style=\"font-weight: bold\">]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m84.83194236614678\u001b[0m, \u001b[1;36m1023.1061487505765\u001b[0m, \u001b[1;36m13009.095242108186\u001b[0m\u001b[1m]\u001b[0m\n"
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m88.48164595004377\u001b[0m, \u001b[1;36m1006.6169282281314\u001b[0m, \u001b[1;36m13025.41212327737\u001b[0m\u001b[1m]\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -815,11 +817,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "millors_grups_final = list(best_groups.values())"
+    "millors_grups_final = list(best_groups.values())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('optimal_groups.json', 'w') as json_file:\n",
+    "    json.dump(millors_grups_final, json_file, indent=4)"
    ]
   }
  ],
@@ -839,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
