--- a/Algorithms/group_maker (1).ipynb
+++ b/Algorithms/group_maker (1).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "4  0.034948  0.000000   0.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,17 +792,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">85.90399113683051</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1025.8411884884108</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13013.68665223772</span><span style=\"font-weight: bold\">]</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">[</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.0</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">86.15799584865331</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1022.705476868627</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13003.712546148474</span><span style=\"font-weight: bold\">]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m85.90399113683051\u001b[0m, \u001b[1;36m1025.8411884884108\u001b[0m, \u001b[1;36m13013.68665223772\u001b[0m\u001b[1m]\u001b[0m\n"
+       "\u001b[1m[\u001b[0m\u001b[1;36m0.0\u001b[0m, \u001b[1;36m0.0\u001b[0m, \u001b[1;36m86.15799584865331\u001b[0m, \u001b[1;36m1022.705476868627\u001b[0m, \u001b[1;36m13003.712546148474\u001b[0m\u001b[1m]\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "def save_pickle(variable, path: str):\n",
+    "    try:\n",
+    "        with open(path, 'wb') as handle:\n",
+    "            pickle.dump(variable, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "        return 'ok!'\n",
+    "    except Exception as err:\n",
+    "        print(\"An error occurred!!!: \" + str(err))\n",
+    "\n",
+    "        \n",
+    "def load_pickle(path):\n",
+    "    try:\n",
+    "        with open(path, 'rb') as handle:\n",
+    "            return pickle.load(handle)\n",
+    "    except Exception as err:\n",
+    "        print(\"An error occurred!!!: \" + str(err))\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok!'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "save_pickle(id_nom, \"id_nom.pickle\")\n",
+    "save_pickle(id_email, \"id_email.pickle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -879,25 +925,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+--------------------+-------------------------------+\n",
-       "|        Nom         |             Email             |\n",
-       "+--------------------+-------------------------------+\n",
-       "| Zoë Émile-Linguate |   zo_mile-linguate@gmail.com  |\n",
-       "| Esther Sofía Braun | esther_sofa_braun@outlook.com |\n",
-       "|    Emily Patel     |     emily_patel@gmail.com     |\n",
-       "|  Anna Maria Solà   |    anna_maria_sol@gmail.com   |\n",
-       "+--------------------+-------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------------+------------------------------------+\n",
+       "|           Nom           |               Email                |\n",
+       "+-------------------------+------------------------------------+\n",
+       "| Alessia Caterina García | alessia_caterina_garca@outlook.com |\n",
+       "|  Aurora Blanchet Ferrer |  aurora_blanchet_ferrer@gmail.com  |\n",
+       "|   Sònia Patricia James  |   snia_patricia_james@gmail.com    |\n",
+       "|     Alessia Wyndham     |    alessia_wyndham@outlook.com     |\n",
+       "+-------------------------+------------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+--------------------+-------------------------------+\n",
-       "|        Nom         |             Email             |\n",
-       "+--------------------+-------------------------------+\n",
-       "| Zoë Émile-Linguate |   zo_mile-linguate@gmail.com  |\n",
-       "| Esther Sofía Braun | esther_sofa_braun@outlook.com |\n",
-       "|    Emily Patel     |     emily_patel@gmail.com     |\n",
-       "|  Anna Maria Solà   |    anna_maria_sol@gmail.com   |\n",
-       "+--------------------+-------------------------------+\n"
+       "+-------------------------+------------------------------------+\n",
+       "|           Nom           |               Email                |\n",
+       "+-------------------------+------------------------------------+\n",
+       "| Alessia Caterina García | alessia_caterina_garca@outlook.com |\n",
+       "|  Aurora Blanchet Ferrer |  aurora_blanchet_ferrer@gmail.com  |\n",
+       "|   Sònia Patricia James  |   snia_patricia_james@gmail.com    |\n",
+       "|     Alessia Wyndham     |    alessia_wyndham@outlook.com     |\n",
+       "+-------------------------+------------------------------------+\n"
       ]
      },
      "metadata": {},
@@ -936,25 +982,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+----------------------------+---------------------------------------+\n",
-       "|            Nom             |                 Email                 |\n",
-       "+----------------------------+---------------------------------------+\n",
-       "|    Sofía López Martínez    |      sofa_lpez_martnez@gmail.com      |\n",
-       "|    Lena Valencia Hansen    |     lena_valencia_hansen@gmail.com    |\n",
-       "| Aurélie Montserrat Collins | aurlie_montserrat_collins@outlook.com |\n",
-       "|        Lucas Parker        |        lucas_parker@outlook.com       |\n",
-       "+----------------------------+---------------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+---------------------------+---------------------------------------+\n",
+       "|            Nom            |                 Email                 |\n",
+       "+---------------------------+---------------------------------------+\n",
+       "|     María Sofía García    |       mara_sofa_garca@gmail.com       |\n",
+       "| Luisa Margarida Cambridge | luisa_margarida_cambridge@outlook.com |\n",
+       "|        Ava Thompson       |         ava_thompson@gmail.com        |\n",
+       "|        Ariel Pérez        |          ariel_prez@gmail.com         |\n",
+       "+---------------------------+---------------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+----------------------------+---------------------------------------+\n",
-       "|            Nom             |                 Email                 |\n",
-       "+----------------------------+---------------------------------------+\n",
-       "|    Sofía López Martínez    |      sofa_lpez_martnez@gmail.com      |\n",
-       "|    Lena Valencia Hansen    |     lena_valencia_hansen@gmail.com    |\n",
-       "| Aurélie Montserrat Collins | aurlie_montserrat_collins@outlook.com |\n",
-       "|        Lucas Parker        |        lucas_parker@outlook.com       |\n",
-       "+----------------------------+---------------------------------------+\n"
+       "+---------------------------+---------------------------------------+\n",
+       "|            Nom            |                 Email                 |\n",
+       "+---------------------------+---------------------------------------+\n",
+       "|     María Sofía García    |       mara_sofa_garca@gmail.com       |\n",
+       "| Luisa Margarida Cambridge | luisa_margarida_cambridge@outlook.com |\n",
+       "|        Ava Thompson       |         ava_thompson@gmail.com        |\n",
+       "|        Ariel Pérez        |          ariel_prez@gmail.com         |\n",
+       "+---------------------------+---------------------------------------+\n"
       ]
      },
      "metadata": {},
@@ -993,25 +1039,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------------+----------------------------------+\n",
-       "|           Nom           |              Email               |\n",
-       "+-------------------------+----------------------------------+\n",
-       "| Aurélie Sanchez Elliott | aurlie_sanchez_elliott@gmail.com |\n",
-       "|      Helena Klinger     |    helena_klinger@outlook.com    |\n",
-       "|     Antónia Gaspard     |     antnia_gaspard@gmail.com     |\n",
-       "|     Rafaelo Zanetti     |    rafaelo_zanetti@gmail.com     |\n",
-       "+-------------------------+----------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------+------------------------------+\n",
+       "|        Nom        |            Email             |\n",
+       "+-------------------+------------------------------+\n",
+       "|   Evelyn Harper   |  evelyn_harper@outlook.com   |\n",
+       "| Sofía Rae Johnson | sofa_rae_johnson@outlook.com |\n",
+       "| Anna María Garcia |  anna_mara_garcia@gmail.com  |\n",
+       "|      Sara Mas     |      sara_mas@gmail.com      |\n",
+       "+-------------------+------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+-------------------------+----------------------------------+\n",
-       "|           Nom           |              Email               |\n",
-       "+-------------------------+----------------------------------+\n",
-       "| Aurélie Sanchez Elliott | aurlie_sanchez_elliott@gmail.com |\n",
-       "|      Helena Klinger     |    helena_klinger@outlook.com    |\n",
-       "|     Antónia Gaspard     |     antnia_gaspard@gmail.com     |\n",
-       "|     Rafaelo Zanetti     |    rafaelo_zanetti@gmail.com     |\n",
-       "+-------------------------+----------------------------------+\n"
+       "+-------------------+------------------------------+\n",
+       "|        Nom        |            Email             |\n",
+       "+-------------------+------------------------------+\n",
+       "|   Evelyn Harper   |  evelyn_harper@outlook.com   |\n",
+       "| Sofía Rae Johnson | sofa_rae_johnson@outlook.com |\n",
+       "| Anna María Garcia |  anna_mara_garcia@gmail.com  |\n",
+       "|      Sara Mas     |      sara_mas@gmail.com      |\n",
+       "+-------------------+------------------------------+\n"
       ]
      },
      "metadata": {},
@@ -1050,25 +1096,25 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+---------------------+-------------------------------+\n",
-       "|         Nom         |             Email             |\n",
-       "+---------------------+-------------------------------+\n",
-       "| Sofia Estela Farran | sofia_estela_farran@gmail.com |\n",
-       "|   Aurélie Windsor   |    aurlie_windsor@yahoo.com   |\n",
-       "|   Eliana Rodriguez  |   eliana_rodriguez@yahoo.com  |\n",
-       "|    Evelyn Winters   |   evelyn_winters@outlook.com  |\n",
-       "+---------------------+-------------------------------+\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">+-------------------------------+---------------------------------------+\n",
+       "|              Nom              |                 Email                 |\n",
+       "+-------------------------------+---------------------------------------+\n",
+       "|      Maya Lauren Winters      |     maya_lauren_winters@gmail.com     |\n",
+       "| Sofía Alejandra Cruz Martínez | sofa_alejandra_cruz_martnez@yahoo.com |\n",
+       "|   Alessandra Elena Rodriguez  |  alessandra_elena_rodriguez@gmail.com |\n",
+       "|       Sofía Evelyn Watts      |      sofa_evelyn_watts@yahoo.com      |\n",
+       "+-------------------------------+---------------------------------------+\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "+---------------------+-------------------------------+\n",
-       "|         Nom         |             Email             |\n",
-       "+---------------------+-------------------------------+\n",
-       "| Sofia Estela Farran | sofia_estela_farran@gmail.com |\n",
-       "|   Aurélie Windsor   |    aurlie_windsor@yahoo.com   |\n",
-       "|   Eliana Rodriguez  |   eliana_rodriguez@yahoo.com  |\n",
-       "|    Evelyn Winters   |   evelyn_winters@outlook.com  |\n",
-       "+---------------------+-------------------------------+\n"
+       "+-------------------------------+---------------------------------------+\n",
+       "|              Nom              |                 Email                 |\n",
+       "+-------------------------------+---------------------------------------+\n",
+       "|      Maya Lauren Winters      |     maya_lauren_winters@gmail.com     |\n",
+       "| Sofía Alejandra Cruz Martínez | sofa_alejandra_cruz_martnez@yahoo.com |\n",
+       "|   Alessandra Elena Rodriguez  |  alessandra_elena_rodriguez@gmail.com |\n",
+       "|       Sofía Evelyn Watts      |      sofa_evelyn_watts@yahoo.com      |\n",
+       "+-------------------------------+---------------------------------------+\n"
       ]
      },
      "metadata": {},
